Support multiple water sources per structure
